@@ -397,6 +397,27 @@ public class TestPigServer {
         // clean-up
         Assert.assertTrue(fs.delete(new Path(jarLocation), true));
     }
+    
+    @Test
+    public void testRegisterRemoteMacro() throws Throwable {
+        String macroName = "util.pig";
+        File macroFile = File.createTempFile("tmp", "");
+        PrintWriter pw = new PrintWriter(new FileWriter(macroFile));
+        pw.println("DEFINE row_count(X) RETURNS Z { Y = group $X all; $Z = foreach Y generate COUNT($X); };");
+        pw.close();
+        
+        FileSystem fs = cluster.getFileSystem();
+        fs.copyFromLocalFile(new Path(macroFile.getAbsolutePath()), new Path(macroName));
+        
+        Util.createInputFile(cluster, "testRegisterRemoteMacro_input", new String[]{"1", "2"});
+        
+        pig.registerQuery("import 'util.pig';");
+        pig.registerQuery("a = load 'testRegisterRemoteMacro_input';");
+        pig.registerQuery("b = row_count(a);");
+        Iterator<Tuple> iter = pig.openIterator("b");
+        
+        Assert.assertTrue(((Long)iter.next().get(0))==2);
+    }
 
     @Test
     public void testDescribeLoad() throws Throwable {
